[project]
name = "ai-ceo-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "chromadb>=0.6.0",
    "feedparser>=6.0.12",
    "nltk>=3.9.0",
    "pandas>=2.2.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "sentence-transformers>=5.6.0",
    "streamlit>=1.40.0",
    "torch>=2.0.0",
    "transformers>=4.45.0",
]
